Fix off-center profile images on mobile

--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -62,6 +62,10 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
+
+    object {
+      margin: 0 auto;
+    }
   }
 
   .about-col {
